--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://jelenkovic.xyz/'
+baseURL = 'strong-mooncake-123a84.netlify.app'
 languageCode = 'en-us'
 title = 'Andrija Jelenkovic'
 paginate = 6
