--- a/config.toml
+++ b/config.toml
@@ -3,3 +3,20 @@ languageCode = 'en-us'
 title = 'Andrija Jelenkovic'
 paginate = 6
 disableKinds = ['taxonomy', 'term']
+
+
+[markup]
+  [markup.highlight]
+    anchorLineNos = false
+    codeFences = true
+    guessSyntax = false
+    hl_Lines = ''
+    hl_inline = false
+    lineAnchors = ''
+    lineNoStart = 1
+    lineNos = true
+    lineNumbersInTable = true
+    noClasses = true
+    noHl = false
+    style = 'doom-one'
+    tabWidth = 4
